--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <ul> <li><a routerLink="/login">Home</a></li>
       
-      <li><a href="">About</a></li>
+      <li><a href="/register">About</a></li>
       <li><a href="#">Service</a></li>
    
     </ul>
