--- a/src/app/registerpage/registerpage.component.html
+++ b/src/app/registerpage/registerpage.component.html
@@ -1,20 +1,20 @@
 <h2>Register</h2>
-<form (ngSubmit)="onRegister(username.value, password.value, email.value, phone.value)">
+<form (ngSubmit)="createReg()">
   <div>
     <label for="username">Username:</label>
-    <input type="text" id="username" #username required>
+    <input type="text" id="username" [(ngModel)]="user.username" name="username" required>
   </div>
   <div>
     <label for="password">Password:</label>
-    <input type="password" id="password" #password required>
+    <input type="password" id="password" [(ngModel)]="user.password" name="password" required>
   </div>
   <div>
     <label for="email">Email:</label>
-    <input type="email" id="email" #email required>
+    <input type="email" id="email" [(ngModel)]="user.email" name="email" required>
   </div>
   <div>
     <label for="phone">Phone Number:</label>
-    <input type="tel" id="phone" #phone required>
+    <input type="tel" id="phone" [(ngModel)]="user.phone" name="phone" required>
   </div>
   <button type="submit">Register</button>
   <p *ngIf="errorMessage">{{ errorMessage }}</p>
